--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="" content="" />
 
-<link href="/assets/style/ba_screen.css" rel="stylesheet" type="text/css" />
+<link href="/assets/styles/group_website.css" rel="stylesheet" type="text/css" />
 </head>
 
 <!-- visible content -->
