--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -3,9 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!-- metadata -->
 <head>
-<title>XHTML</title>	
+<title>BACreations</title>	
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="" content="" />
+<meta name="BACreations" content="" />
 
 <link href="/assets/styles/group_website.css" rel="stylesheet" type="text/css" />
 </head>
@@ -14,7 +14,13 @@
 <body>
 	<div id="wrapper">
 		<div id="header"></div>
-		<div id="navigation"></div>
+		<div id="navigation"> <!-- Hier sollen die Links hin (links an den Rand)-->
+			<a href="/leon.html">Leon Mikolajczak</a>
+			<a href="/lukasb.html">Lukas Blesius</a>
+			<a href="/lukasw.html">Lukas Weier</a>
+			<a href="/soeren.html">Soeren Scheibner</a>
+			<a href="/jonathan.html">Jonathan Koessmeier</a>
+		</div><!-- #navigation -->
 		<div id="content">
 			
 		</div><!-- #content -->
