--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -7,25 +7,28 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="BACreations" content="" />
 
-<link href="/assets/styles/group_website.css" rel="stylesheet" type="text/css" />
+<link href="/Gruppenaufgabe/assets/styles/group_website.css" rel="stylesheet" type="text/css" />
 </head>
 
 <!-- visible content -->
 <body>
 	<div id="wrapper">
 		<div id="header"></div>
-		<div id="navigation"> <!-- Hier sollen die Links hin (links an den Rand)-->
-			<a href="/leon.html">Leon Mikolajczak</a>
-			<a href="/lukasb.html">Lukas Blesius</a>
-			<a href="/lukasw.html">Lukas Weier</a>
-			<a href="/soeren.html">Soeren Scheibner</a>
-			<a href="/jonathan.html">Jonathan Koessmeier</a>
-		</div><!-- #navigation -->
+		
 		<div id="content">
 			
 		</div><!-- #content -->
 		<div id="footer"></div>
 	</div> <!-- wrapper -->
+
+	<div id="navigation">
+		<p>Links</p>
+		<a href="leon.html">Leon Mikolajczak</a>
+		<a href="lukasb.html">Lukas Blesius</a>
+		<a href="lukasw.html">Lukas Weier</a>
+		<a href="soeren.html">Soeren Scheibner</a>
+		<a href="jonathan.html">Jonathan Koessmeier</a>
+	</div>
 </body>
 
 </html>
