--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -23,6 +23,7 @@
 
 	<div id="navigation">
 		<p>Links</p>
+		<p>Test</p>
 		<a href="leon.html">Leon Mikolajczak</a>
 		<a href="lukasb.html">Lukas Blesius</a>
 		<a href="lukasw.html">Lukas Weier</a>
