--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -28,7 +28,7 @@
 		<a href="lukasb.html">Lukas Blesius</a>
 		<a href="lukasw.html">Lukas Weier</a>
 		<a href="soeren.html">Soeren Scheibner</a>
-		<a href="jonathan.html">Jonathan Koessmeier trolo</a>
+		<a href="jonathan.html">Jonathan Koessmeier</a>
 	</div>
 </body>
 
