--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -156,7 +156,9 @@
 				<h2>Unser Team</h2>
 				<p>Bild vom Team</p>
 		</div><!-- #content -->
-		<div id="footer"></div>
+		<div id="footer">
+			<a id="footer_text" target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Created with &#10084; in Frankfurt</a>
+		</div>
 	</div> <!-- wrapper -->
 
 	
