--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -7,8 +7,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="BACreations" content="" />
 
-<link href="/Gruppenaufgabe/assets/styles/group_website.css" rel="stylesheet" type="text/css" />
-<link href="/Gruppenaufgabe/assets/images/favicon.ico" rel="icon" type="image/ico"/>
+<link href="assets/styles/group_website.css" rel="stylesheet" type="text/css" />
+<link href="assets/images/favicon.ico" rel="icon" type="image/ico"/>
 </head>
 
 <!-- visible content -->
