--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -17,7 +17,7 @@
 		<div id="header"></div>
 
 		<ul id="navigation">
-			<p>Logo</p>
+			<img id="logo" src="assets/images/BAC_transparent.png" alt="Logo" width="150" height="150">
 			<li><a href="leon.html">Leon Mikolajczak</a></li>
 			<li><a href="lukasb.html">Lukas Blesius</a></li>
 			<li><a href="lukasw.html">Lukas Weier</a></li>
