--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -19,7 +19,7 @@
 		<ul id="navigation">
 			<img id="logo" src="assets/images/BAC_transparent.png" alt="Logo" width="150" height="150">
 			<li><a href="leon.html">Leon Mikolajczak</a></li>
-			<li><a href="lukasb.html">Lukas Blesius</a></li>
+			<li><a href="https://wurstwasser.xyz/">Lukas Blesius</a></li>
 			<li><a href="lukasw.html">Lukas Weier</a></li>
 			<li><a href="soeren.html">S&ouml;ren Scheibner</a></li>
 			<li><a href="jonathan.html">Jonathan K&ouml;&szlig;meier</a></li>
