--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -17,12 +17,14 @@
 		<div id="header"></div>
 
 		<ul id="navigation">
-			<img id="logo" src="assets/images/BAC_transparent.png" alt="Logo" width="150" height="150">
-			<li><a href="leon.html">Leon Mikolajczak</a></li>
+			<a href="group_website.html">
+				<img id="logo" src="assets/images/BAC_transparent.png" href="group_website.html" alt="Logo" width="150" height="150">
+			</a>
+			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Leon Mikolajczak</a></li>
 			<li><a href="https://wurstwasser.xyz/">Lukas Blesius</a></li>
-			<li><a href="lukasw.html">Lukas Weier</a></li>
-			<li><a href="soeren.html">S&ouml;ren Scheibner</a></li>
-			<li><a href="jonathan.html">Jonathan K&ouml;&szlig;meier</a></li>
+			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Lukas Weier</a></li>
+			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">S&ouml;ren Scheibner</a></li>
+			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Jonathan K&ouml;&szlig;meier</a></li>
 		</ul>
 		
 		<div id="content">
