validated html and css

--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -17,9 +17,9 @@
 		<div id="header"></div>
 
 		<ul id="navigation">
-			<a href="group_website.html">
-				<img id="logo" src="assets/images/BAC_transparent.png" href="group_website.html" alt="Logo" width="150" height="150">
-			</a>
+			<li><a href="group_website.html">
+				<img id="logo" src="assets/images/BAC_transparent.png" alt="Logo" width="150" height="150"></img>
+			</a></li>
 			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Leon Mikolajczak</a></li>
 			<li><a href="https://wurstwasser.xyz/">Lukas Blesius</a></li>
 			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Lukas Weier</a></li>
@@ -97,7 +97,7 @@
 				<p>Bild vom Team</p>
 		</div><!-- #content -->
 		<div id="footer">
-			<a id="footer_text" target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Created with &#10084; in Frankfurt</a>
+			<a id="footer_text" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Created with &#10084; in Frankfurt</a>
 		</div>
 	</div> <!-- wrapper -->
 
