--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -8,7 +8,7 @@
 <meta name="BACreations" content="" />
 
 <link href="assets/styles/group_website.css" rel="stylesheet" type="text/css" />
-<link href="assets/images/BAC_transparent_white.ico" rel="icon" type="image/ico"/>
+<link href="assets/images/favicon.ico" rel="icon" type="image/ico"/>
 </head>
 
 <!-- visible content -->
