--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -20,11 +20,11 @@
 			<li><a href="group_website.html">
 				<img id="logo" src="assets/images/BAC_transparent.png" alt="Logo" width="150" height="150"></img>
 			</a></li>
-			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Leon Mikolajczak</a></li>
-			<li><a href="https://wurstwasser.xyz/">Lukas Blesius</a></li>
-			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Lukas Weier</a></li>
-			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">S&ouml;ren Scheibner</a></li>
-			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Jonathan K&ouml;&szlig;meier</a></li>
+			<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Leon Mikolajczak</a></li>
+			<li><a class="hover_class" href="https://wurstwasser.xyz/">Lukas Blesius</a></li>
+			<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Lukas Weier</a></li>
+			<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">S&ouml;ren Scheibner</a></li>
+			<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Jonathan K&ouml;&szlig;meier</a></li>
 		</ul>
 		
 		<div id="content">
