Umlaute in den namen geändert wegen utf-8 angabe

--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -24,8 +24,8 @@
 				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Leon Mikolajczak</a></li>
 				<li><a class="hover_class" href="https://wurstwasser.xyz/">Lukas Blesius</a></li>
 				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Lukas Weier</a></li>
-				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">S&ouml;ren Scheibner</a></li>
-				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Jonathan K&ouml;&szlig;meier</a></li>
+				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Sören Scheibner</a></li>
+				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Jonathan Kößmeier</a></li>
 			</ul>
 		</div>
 		
