Logo alt und title added

--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -19,7 +19,7 @@
 		<div>
 			<ul id="navigation">
 				<li><a href="group_website.html">
-					<img id="logo" src="assets/images/BAC_transparent.png" alt="Logo" width="150" height="150"></img>
+					<img id="logo" src="assets/images/BAC_transparent.png" alt="Logo BAC" title="Logo BAC" width="150" height="150"></img>
 				</a></li>
 				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Leon Mikolajczak</a></li>
 				<li><a class="hover_class" href="https://wurstwasser.xyz/">Lukas Blesius</a></li>
