--- a/Gruppenaufgabe/group_website.html
+++ b/Gruppenaufgabe/group_website.html
@@ -95,7 +95,7 @@
 				An ‘extremely credible source’ has called my office and told me that Barack Obama’s placeholder text is a fraud. We have so many things that we have to do better... and certainly ipsum is one of them. Lorem Ipsum better hope that there are no "tapes" of our conversations before he starts leaking to the press!
 				Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your website. I don't think anybody knows it was Russia that wrote Lorem Ipsum, but I don't know, maybe it was. It could be Russia, but it could also be China. It could also be lots of other people. It also could be some wordsmith sitting on their bed that weights 400 pounds. Ok? Look at that text! Would anyone use that? Can you imagine that, the text of your next webpage?!
 				Lorem Ipsum better hope that there are no "tapes" of our conversations before he starts leaking to the press! I was going to say something extremely rough to Lorem Ipsum, to its family, and I said to myself, "I can't do it. I just can't do it. It's inappropriate. It's not nice." I don't think anybody knows it was Russia that wrote Lorem Ipsum, but I don't know, maybe it was. It could be Russia, but it could also be China. It could also be lots of other people. It also could be some wordsmith sitting on their bed that weights 400 pounds. Ok?</p>
-				<h2>Unser Team</h2>
+				<h2>Unser Team stinkt</h2>
 				<p>Bild vom Team</p>
 		</div><!-- #content -->
 		<div id="footer">
