fixed wrong hyperlink

--- a/Gruppenaufgabe/Leon/leon.html
+++ b/Gruppenaufgabe/Leon/leon.html
@@ -27,7 +27,7 @@
 				<i class="far fa-times-circle"></i>
 			</a>
 			<div class="overlay_content">		
-				<a class="hover_class" href="../group_website.html">Startseite</a> 
+				<a class="hover_class" href="../index.html">Startseite</a> 
 				<a class="hover_class" href="https://wurstwasser.xyz/">Lukas Blesius</a> 
 				<a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Lukas Weier</a> 
 				<a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Sören Scheibner</a> 
