hab mich verlinkt

--- a/Gruppenaufgabe/index.html
+++ b/Gruppenaufgabe/index.html
@@ -23,7 +23,7 @@
 				</a></li>
 				<li><a class="hover_class" href="Leon/leon.html">Leon Mikolajczak</a></li>
 				<li><a class="hover_class" href="https://wurstwasser.xyz/">Lukas Blesius</a></li>
-				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Lukas Weier</a></li>
+				<li><a class="hover_class" href="lukas/index.html">Lukas Weier</a></li>
 				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Sören Scheibner</a></li>
 				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Jonathan Kößmeier</a></li>
 			</ul>
