--- a/Gruppenaufgabe/index.html
+++ b/Gruppenaufgabe/index.html
@@ -32,8 +32,14 @@
 		<div id="content">
 			<h1>BACreations</h1>
 			<h2>Hardwarestore-Managementsystem</h2>
-			<p> 
-				<p>Bild vom Team</p>
+			<p>
+				BA Creations ist ein Software-Entwiklungsteam, welches besonders durch sein fabelhaftes, praktisches, umwerfendes, und einfach genial neu gedachtes<br>
+				Hardwarestore-Managementsystem bekannt geworden ist. Das HSMS hat den Markt nachhaltig zum positiven Verändert und 9/10 Fachmärkten würden es<br> 
+				weiter empfehlen. Das Team selbst gründete sich bereits im Jahr 2020 und hat trotz äußeren Einflüssen immer abgeliefert.<br> 
+				Es besteht aus insgesamt 5 kreativen Köpfen, die jeweils ihre eigenen Spezialgebiete haben.<br>
+				Zusammen haben sie die IT revolutioniert und sind bereit sich auch Ihr Problem zumindest anzuschauen!
+			</p>
+			<p>Bild vom Team</p>
 		</div><!-- #content -->
 		<div id="footer">
 			<a id="footer_text" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Created with &#10084; in Frankfurt</a>
