--- a/Gruppenaufgabe/Leon/leon.html
+++ b/Gruppenaufgabe/Leon/leon.html
@@ -22,16 +22,16 @@
 <body>
 	<div id="wrapper">
 
-		<nav id="nav_bar" class="overlay">	
+		<nav id="nav_bar" class="overlay">	<!-- Start Menu -->
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
 				<i class="far fa-times-circle"></i>
 			</a>
 			<div class="overlay_content">		
 				<a class="hover_class" href="../index.html">Startseite</a> 
-				<a class="hover_class" href="https://wurstwasser.xyz/">Lukas Blesius</a> 
-				<a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Lukas Weier</a> 
-				<a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Sören Scheibner</a> 
-				<a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Jonathan Kößmeier</a> 
+				<a class="hover_class" href="../Lukasb/lukasb.html">Lukas Blesius</a> 
+				<a class="hover_class" href="../Lukasw/lukasw.html">Lukas Weier</a> 
+				<a class="hover_class" href="../Sören/sören.html">Sören Scheibner</a> 
+				<a class="hover_class" href="../Jonathan/jonathan.html">Jonathan Kößmeier</a> 
 			</div>
 		
 			<div id="open_nav_bar">
@@ -52,7 +52,7 @@
 				</script>
 			</div>
 
-		</nav>
+		</nav>  <!-- End Menu -->
 
 		
 		<div id="content">
@@ -115,7 +115,7 @@
 				</audio>
 			</div>
 
-			<div id="viewer" class="content_bckgr">
+			<div id="viewer" class="content_bckgr"> <!-- Start Viewer -->
 				<header id="viewer_header">
 					<h2>Unser Whisky Bericht 2020</h2>
 				</header>
