--- a/Gruppenaufgabe/index.html
+++ b/Gruppenaufgabe/index.html
@@ -31,7 +31,7 @@
 		
 		<div id="content">
 			<h1>BACreations</h1>
-			<h2>Hardwarestore-Managementsystem</h2>
+			<h2>Wer sind wir und was machen wir?</h2>
 			<p>
 				BA Creations ist ein Software-Entwiklungsteam, welches besonders durch sein fabelhaftes, praktisches, umwerfendes, und einfach genial neu gedachtes<br>
 				Hardwarestore-Managementsystem bekannt geworden ist. Das HSMS hat den Markt nachhaltig zum positiven Verändert und 9/10 Fachmärkten würden es<br> 
