--- a/Gruppenaufgabe/Leon/leon.html
+++ b/Gruppenaufgabe/Leon/leon.html
@@ -15,7 +15,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 <link href="assets/styles/leon.css" rel="stylesheet" type="text/css" />
-<link href="favicon.ico" rel="icon" type="image/ico"/>
+<link href="favicon_.ico" rel="icon" type="image/ico"/>
 </head>
 
 <!-- visible content -->
