leon-site: changed margin/padding

--- a/Gruppenaufgabe/Leon/leon.html
+++ b/Gruppenaufgabe/Leon/leon.html
@@ -106,7 +106,7 @@
 
 			<br/>
 
-			<div class="content_bckgr" id="audio_cont">
+			<div id="audio_cont" class="content_bckgr">
 				<p>Wie sich eine Flasche beim Öffnen anhört:</p>
 				<audio id="audio_plop" class="content_bckgr" controls>
 					<source src="assets/audios/Plopp.mp3" type="audio/mp3">
