--- a/Gruppenaufgabe/index.html
+++ b/Gruppenaufgabe/index.html
@@ -33,13 +33,13 @@
 			<h1 id="h_title">BACreations</h1>
 			<h2 id="second_headline">Hardwarestore-Managementsystem</h2>
 			<p id="description_bac">
-				BACreations ist ein Software-Entwicklungsteam, welches besonders durch sein fabelhaftes, praktisches, umwerfendes, und einfach genial neu gedachtes<br>
-				Hardwarestore-Managementsystem bekannt geworden ist. Das HSMS hat den Markt nachhaltig zum positiven verändert und 11/10 Fachmärkten würden es<br> 
-				weiter empfehlen. Das Team selbst gründete sich bereits im Jahr 2020 und hat trotz äußeren Einflüssen immer abgeliefert.<br> 
-				Es besteht aus insgesamt 5 kreativen Köpfen, die jeweils ihre eigenen Spezialgebiete haben.<br>
+				BACreations ist ein Software-Entwicklungsteam, welches besonders durch sein fabelhaftes, praktisches, umwerfendes, und einfach genial neu gedachtes<br/>
+				Hardwarestore-Managementsystem bekannt geworden ist. Das HSMS hat den Markt nachhaltig zum positiven verändert und 11/10 Fachmärkten würden es<br/> 
+				weiter empfehlen. Das Team selbst gründete sich bereits im Jahr 2020 und hat trotz äußeren Einflüssen immer abgeliefert.<br/> 
+				Es besteht aus insgesamt 5 kreativen Köpfen, die jeweils ihre eigenen Spezialgebiete haben.<br/>
 				Zusammen haben sie die IT revolutioniert und sind bereit sich auch Ihr Problem zumindest anzuschauen!
 			</p>
-			<img id="group_image" src="assets/images/bac_team.png" alt="Founders of BACreations in library">
+			<img id="group_image" src="assets/images/bac_team.png" alt="Founders of BACreations in library"/>
 		</div><!-- #content -->
 		<div id="footer">
 			<a id="footer_text" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Created with &#10084; in Frankfurt</a>
