changed folder structure

--- a/Gruppenaufgabe/index.html
+++ b/Gruppenaufgabe/index.html
@@ -21,11 +21,11 @@
 				<li><a href="index.html">
 					<img id="logo" src="assets/images/BAC_transparent.png" alt="Logo BAC" title="Logo BAC" width="150" height="150"/>
 				</a></li>
-				<li><a class="hover_class" href="Leon/leon.html">Leon Mikolajczak</a></li>
-				<li><a class="hover_class" href="https://wurstwasser.xyz/">Lukas Blesius</a></li>
-				<li><a class="hover_class" href="Lukas/index.html">Lukas Weier</a></li>
-				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Sören Scheibner</a></li>
-				<li><a class="hover_class" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Jonathan Kößmeier</a></li>
+				<li><a class="hover_class" href="jonathan_koessmeier/jonathan_koessmeier.html">Jonathan Kößmeier</a></li>
+				<li><a class="hover_class" href="leon_mikolajczak/leon_mikolajczak">Leon Mikolajczak</a></li>
+				<li><a class="hover_class" href="lukas_blesius/lukas_blesius.html">Lukas Blesius</a></li>
+				<li><a class="hover_class" href="lukas_weier/lukas_weier.html">Lukas Weier</a></li>
+				<li><a class="hover_class" href="soeren_scheibner/soeren_scheibner.html">Sören Scheibner</a></li>
 			</ul>
 		</div>
 		
