--- a/Gruppenaufgabe/leon_mikolajczak/leon_mikolajczak.html
+++ b/Gruppenaufgabe/leon_mikolajczak/leon_mikolajczak.html
@@ -25,10 +25,10 @@
 		<nav id="nav_overlay" class="overlay">	<!-- Start Menu -->
 			<div class="overlay_content">		
 				<a class="hover_class" href="../index.html">Startseite</a> 
-				<a class="hover_class" href="../Lukasb/lukasb.html">Lukas Blesius</a> 
-				<a class="hover_class" href="../Lukasw/lukasw.html">Lukas Weier</a> 
-				<a class="hover_class" href="../Sören/sören.html">Sören Scheibner</a> 
-				<a class="hover_class" href="../Jonathan/jonathan.html">Jonathan Kößmeier</a> 
+				<a class="hover_class" href="../jonathan_koessmeier/jonathan_koessmeier.html">Jonathan Kößmeier</a> 
+				<a class="hover_class" href="../lukas_blesius/lukas_blesius.html">Lukas Blesius</a> 
+				<a class="hover_class" href="../lukas_weier/lukas_weier.html">Lukas Weier</a> 
+				<a class="hover_class" href="../soeren_scheibner/soeren_scheibner.html">Sören Scheibner</a> 
 			</div>
 		
 			<div id="open_nav_bar">
