--- a/Gruppenaufgabe/index.html
+++ b/Gruppenaufgabe/index.html
@@ -22,7 +22,7 @@
 					<img id="logo" src="assets/images/BAC_transparent.png" alt="Logo BAC" title="Logo BAC" width="150" height="150"/>
 				</a></li>
 				<li><a class="hover_class" href="jonathan_koessmeier/jonathan_koessmeier.html">Jonathan Kößmeier</a></li>
-				<li><a class="hover_class" href="leon_mikolajczak/leon_mikolajczak">Leon Mikolajczak</a></li>
+				<li><a class="hover_class" href="leon_mikolajczak/leon_mikolajczak.html">Leon Mikolajczak</a></li>
 				<li><a class="hover_class" href="lukas_blesius/lukas_blesius.html">Lukas Blesius</a></li>
 				<li><a class="hover_class" href="lukas_weier/lukas_weier.html">Lukas Weier</a></li>
 				<li><a class="hover_class" href="soeren_scheibner/soeren_scheibner.html">Sören Scheibner</a></li>
