--- a/Gruppenaufgabe/index.html
+++ b/Gruppenaufgabe/index.html
@@ -39,7 +39,7 @@
 				Es besteht aus insgesamt 5 kreativen Köpfen, die jeweils ihre eigenen Spezialgebiete haben.<br/>
 				Zusammen haben sie die IT revolutioniert und sind bereit sich auch Ihr Problem zumindest anzuschauen!
 			</p>
-			<img id="group_image" src="assets/images/bac_team.png" alt="Founders of BACreations in library"/>
+			<img id="group_image" src="assets/images/bac_team.png" alt="Founders of BACreations in library" title="Founders of BACreations in library" width="1000" height="445"/>
 		</div><!-- #content -->
 		<div id="footer">
 			<a id="footer_text" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Created with &#10084; in Frankfurt</a>
