--- a/Gruppenaufgabe/lukas_blesius/lukas_blesius.html
+++ b/Gruppenaufgabe/lukas_blesius/lukas_blesius.html
@@ -26,10 +26,10 @@
 			<ul id="ul_nav">
 				<li><a class="hover_class" href="../index.html">Home</a></li>
 				<li><a class="hover_class" href="../jonathan_koessmeier/jonathan_koessmeier.html">Jonathan Kößmeier</a></li>
-				<li><a class="hover_class" href="./leon_mikolajczak/leon_mikolajczak.html">Leon Mikolajczak</a></li>
+				<li><a class="hover_class" href="../leon_mikolajczak/leon_mikolajczak.html">Leon Mikolajczak</a></li>
 				<li><a class="hover_class" href="../lukas_blesius/lukas_blesius.html">Lukas Blesius</a></li>
 				<li><a class="hover_class" href="../lukas_weier/lukas_weier.html">Lukas Weier</a></li>
-				<li><a class="hover_class" href="./soeren_scheibner/soeren_scheibner.html">Sören Scheibner</a></li>
+				<li><a class="hover_class" href="../soeren_scheibner/soeren_scheibner.html">Sören Scheibner</a></li>
 			</ul>
 		</nav>
 	</div>
