--- a/Gruppenaufgabe/lukas_blesius/lukas_blesius.html
+++ b/Gruppenaufgabe/lukas_blesius/lukas_blesius.html
@@ -78,7 +78,7 @@
 				<img src="assets/images/block3.JPG" alt="Sonnenaufgang">
 				<div class="centered_content">
 					<video id="videoElement" width="1600" height="900" preload autoplay loop muted>
-						<source src="assets/videos/leere_strasse.av1.mp4" type="video/av1">
+						<source src="assets/videos/leere_strasse.av1.mp4" type="video/mp4">
 						<source src="assets/videos/leere_strasse.webm" type="video/webm">
 						<source src="assets/videos/leere_strasse.mov" type="video/mov">
 						<p>Der Browser unterstützt keine Video-Wiedergabe.</p>
