--- a/Gruppenaufgabe/lukas_weier/lukas_weier.html
+++ b/Gruppenaufgabe/lukas_weier/lukas_weier.html
@@ -29,7 +29,7 @@
                     target=”_blank”><img src="img/RD_Logo.png" alt="RD Logo" title="RD Logo" width="225"
                         height="150"></a>
                 <span class="right">
-                    <a>Gruppenseite</a>
+                    <a href="../index.html">Gruppenseite</a>
                     <a href="media/SmartHome.pdf" download>Download</a>
                 </span>
             </div>
