--- a/Gruppenaufgabe/lukas_blesius/lukas_blesius.html
+++ b/Gruppenaufgabe/lukas_blesius/lukas_blesius.html
@@ -13,7 +13,6 @@
 
 	<link href="assets/images/favicon.ico" rel="shortcut icon"/>
 	<link href="assets/stylesheets/main.css" rel="stylesheet" type="text/css" />
-	<script src="assets/scripts/script.js" charset="utf-8"></script>
 	<script src="assets/scripts/media_stop.js" charset="utf-8"></script>
 
 </head>
@@ -97,19 +96,7 @@
 					<canvas id="canvas_element" width="1600" height="900" >
 						Your browser does not support the HTML canvas tag.</canvas>
 				</div>
-				<script>
-					    let canvas_element = document.getElementById("canvas_element");
-						let context = canvas_element.getContext("2d");
-						for (i = 0; i < 33; i++) {
-							let x = Math.random() * window.innerWidth;
-							let y = Math.random() * window.innerHeight;
-							let r = Math.random() * 120 + 30;
-							context.beginPath();
-							context.arc(x, y, r, 0, 2 * Math.PI);
-							context.fillStyle = '#2E281F';
-							context.fill();
-						}
-				</script>
+				<script src="assets/scripts/script.js"></script>
 			</div>
 		</section>
 
