--- a/Gruppenaufgabe/lukas_weier/lukas_weier.html
+++ b/Gruppenaufgabe/lukas_weier/lukas_weier.html
@@ -10,8 +10,8 @@
     <meta name="author" content="Lukas Weier" />
     <meta name="robots" content="no-index" />
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
     <link href="favicon.ico" rel="icon" type="image/ico" />
 </head>
@@ -25,12 +25,10 @@
                     <a href="lukas_weier.html">Aktuelles</a>
                     <a href="impressionen.html">Impressionen</a>
                 </span>
-                <a href="https://www.google.com/search?client=opera&q=residenz+donnersberg&sourceid=opera&ie=UTF-8&oe=UTF-8"
-                    target=”_blank”><img src="img/RD_Logo.png" alt="RD Logo" title="RD Logo" width="225"
-                        height="150"></a>
+                <a href="https://www.google.com/search?client=opera&q=residenz+donnersberg&sourceid=opera&ie=UTF-8&oe=UTF-8" target=”_blank”><img src="assets/img/RD_Logo.png" alt="RD Logo" title="RD Logo" width="225" height="150"></a>
                 <span class="right">
                     <a href="../index.html">Gruppenseite</a>
-                    <a href="media/SmartHome.pdf" download>Download</a>
+                    <a href="assets/media/SmartHome.pdf" download>Download</a>
                 </span>
             </div>
         </nav>
@@ -42,19 +40,17 @@
             <canvas id="canvas01" width="300" height="150" style="position: absolute; z-index: -1; margin-top: 20px;">
                 Leider unterstützt ihr Browser kein Canvas.
             </canvas>
-            <img src="img/room.png" alt="Living Room" style="width: 100%;">
-            <div id="einblenden" onmouseover="make_base('img/blau.png')" onmouseout="make_base('img/orange.png')">
+            <img src="assets/img/room.png" alt="Living Room" style="width: 100%;">
+            <div id="einblenden" onmouseover="make_base('assets/img/blau.png')" onmouseout="make_base('assets/img/orange.png')">
                 Beleuchtung der Zukunft!</div>
             <div id="scroll" style="position: absolute; width: 100%;">
-                <a href="#section2"><img onmouseover="bigImg(this)" onmouseout="normalImg(this)" src="img/scroll.png"
-                        alt="Scroll Arrow" width="25" height="25"></a>
+                <a href="#section2"><img onmouseover="bigImg(this)" onmouseout="normalImg(this)" src="assets/img/scroll.png" alt="Scroll Arrow" width="25" height="25"></a>
             </div>
         </div>
 
         <div class="container-rooms">
             <div class="sub-up">
-                <div class="room"
-                    style="width: 560px; height: 420px; background-size:100% 100%; background-image:url('img/livingroom.png'); ">
+                <div class="room" style="width: 560px; height: 420px; background-size:100% 100%; background-image:url('assets/img/livingroom.png'); ">
                     <h3 id="section2">Wohnzimmer</h3>
                     <div class="selection">
                         <div class="inputs-left">
@@ -84,12 +80,10 @@
                             </div>
                         </div>
                     </div>
-                    <button class="button1"
-                        onclick="GetInformation('lightsWZ', 'farbeWZ', 'lightOnWZ', 'illuminanceWZ')">Schalten</button>
+                    <button class="button1" onclick="GetInformation('lightsWZ', 'farbeWZ', 'lightOnWZ', 'illuminanceWZ')">Schalten</button>
                 </div>
 
-                <div class="room"
-                    style="width: 560px; height: 420px; background-size:100% 100%; background-image:url('img/bedroom.png') ;">
+                <div class="room" style="width: 560px; height: 420px; background-size:100% 100%; background-image:url('assets/img/bedroom.png') ;">
                     <h3>Schlafzimmer</h3>
                     <div class="selection">
                         <div class="inputs-left">
@@ -119,14 +113,12 @@
                             </div>
                         </div>
                     </div>
-                    <button class="button1"
-                        onclick="GetInformation('lightsSZ', 'farbeSZ', 'lightOnSZ', 'illuminanceSZ')">Schalten</button>
+                    <button class="button1" onclick="GetInformation('lightsSZ', 'farbeSZ', 'lightOnSZ', 'illuminanceSZ')">Schalten</button>
                 </div>
             </div>
 
             <div class="sub-down">
-                <div class="room"
-                    style="width: 560px; height: 420px; background-size:100% 100%; background-image:url('img/kitchen.png') ;">
+                <div class="room" style="width: 560px; height: 420px; background-size:100% 100%; background-image:url('assets/img/kitchen.png') ;">
                     <h3>Küche</h3>
                     <div class="selection">
                         <div class="inputs-left">
@@ -150,17 +142,14 @@
                             </div>
                             <div class="input">
                                 <label>Helligkeit</label>
-                                <input type="range" name="illuminanceKüche" id="illuminanceKüche" min="0" max="100"
-                                    step="1">
+                                <input type="range" name="illuminanceKüche" id="illuminanceKüche" min="0" max="100" step="1">
                             </div>
                         </div>
                     </div>
-                    <button class="button1"
-                        onclick="GetInformation('lightsKüche', 'farbeKüche', 'lightOnKüche', 'illuminanceKüche')">Schalten</button>
+                    <button class="button1" onclick="GetInformation('lightsKüche', 'farbeKüche', 'lightOnKüche', 'illuminanceKüche')">Schalten</button>
                 </div>
 
-                <div class="room"
-                    style="width: 560px; height: 420px; background-size:100% 100%; background-image:url('img/bath.png') ;">
+                <div class="room" style="width: 560px; height: 420px; background-size:100% 100%; background-image:url('assets/img/bath.png') ;">
                     <h3>Badezimmer</h3>
                     <div class="selection">
                         <div class="inputs-left">
@@ -188,8 +177,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="button1"
-                        onclick="GetInformation('lightsBad', 'farbeBad', 'lightOnBad', 'illuminanceBad')">Schalten</button>
+                    <button class="button1" onclick="GetInformation('lightsBad', 'farbeBad', 'lightOnBad', 'illuminanceBad')">Schalten</button>
                 </div>
             </div>
         </div>
@@ -204,10 +192,10 @@
             context = canvas.getContext("2d");
         make_base();
 
-        function make_base(image = "img/orange.png") {
+        function make_base(image = "assets/img/orange.png") {
             base_image = new Image();
             base_image.src = image;
-            base_image.onload = function () {
+            base_image.onload = function() {
                 context.drawImage(base_image, 0, 0);
             }
         }
