--- a/Gruppenaufgabe/lukas_weier/impressionen.html
+++ b/Gruppenaufgabe/lukas_weier/impressionen.html
@@ -10,8 +10,8 @@
     <meta name="author" content="Lukas Weier" />
     <meta name="robots" content="no-index" />
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
     <link href="favicon.ico" rel="icon" type="image/ico" />
 </head>
@@ -25,12 +25,10 @@
                     <a href="lukas_weier.html">Aktuelles</a>
                     <a href="impressionen.html">Impressionen</a>
                 </span>
-                <a href="https://www.google.com/search?client=opera&q=residenz+donnersberg&sourceid=opera&ie=UTF-8&oe=UTF-8"
-                    target=”_blank”><img src="img/RD_Logo.png" alt="RD Logo" title="RD Logo" width="225"
-                        height="150"></a>
+                <a href="https://www.google.com/search?client=opera&q=residenz+donnersberg&sourceid=opera&ie=UTF-8&oe=UTF-8" target=”_blank”><img src="assets/img/RD_Logo.png" alt="RD Logo" title="RD Logo" width="225" height="150"></a>
                 <span class="right">
                     <a>Gruppenseite</a>
-                    <a href="media/SmartHome.pdf" download>Download</a>
+                    <a href="assets/media/SmartHome.pdf" download>Download</a>
                 </span>
             </div>
         </nav>
@@ -42,17 +40,14 @@
         <div class="container">
             <div class="content-right">
                 <p style="padding-right: 3%;">
-                    Im Alltag gibt es zahlreiche Momente in denen ein Smart Home hilfreich sein kann.<br>
-                    Wenn man beispiels weise mehrere Lichter in einem Raum hat und diese nicht<br>
-                    manuell alle einzeln ausschalten möchte gibt es mehrere Möglichkeiten diese auszuschalten.<br>
-                    In meinem Fall kann man die Lichter per App, Schalter an der Tür oder auch per Sprachassistent<br>
-                    ein und ausschalten. Letzteres wird in einem kurzen Video demonstriert:<br>
+                    Im Alltag gibt es zahlreiche Momente in denen ein Smart Home hilfreich sein kann.<br> Wenn man beispiels weise mehrere Lichter in einem Raum hat und diese nicht<br> manuell alle einzeln ausschalten möchte gibt es mehrere Möglichkeiten
+                    diese auszuschalten.<br> In meinem Fall kann man die Lichter per App, Schalter an der Tür oder auch per Sprachassistent<br> ein und ausschalten. Letzteres wird in einem kurzen Video demonstriert:<br>
                 </p>
                 <div id="video">
                     <video controls preload="auto" style="width: 850px; height: 395px;">
-                        <source src="media/LichtAus_mp4.mp4" type="video/mp4" />
-                        <source src="media/LichtAus_ogv.ogv" type="video/ogg" />
-                        <source src="media/LichtAus_webm.webm" type="video/webm" />
+                        <source src="assets/media/LichtAus_mp4.mp4" type="video/mp4" />
+                        <source src="assets/media/LichtAus_ogv.ogv" type="video/ogg" />
+                        <source src="assets/media/LichtAus_webm.webm" type="video/webm" />
                     </video>
                 </div>
             </div>
@@ -60,35 +55,27 @@
             <div class="content-left">
                 <div id="audio">
                     <video controls preload="auto" style="width: 850px; height: 395px;">
-                        <source src="media/wz-beleuchtung.mp4" type="video/mp4" />
-                        <source src="media/wz-beleuchtung.ogv" type="video/ogg" />
-                        <source src="media/wz-beleuchtung.webm" type="video/webm" />
+                        <source src="assets/media/wz-beleuchtung.mp4" type="video/mp4" />
+                        <source src="assets/media/wz-beleuchtung.ogv" type="video/ogg" />
+                        <source src="assets/media/wz-beleuchtung.webm" type="video/webm" />
                     </video>
                 </div>
                 <p style="padding-left: 3%;">
-                    Außerdem gibt es die Möglichkeit über Sprachassistenten Musik in verschiedenen Räumen gleichzeitig
-                    zu hören. <br>
-                    Dabei hat man die Möglichkeit aus der Musikbibliothek von Spotify, Apple Music und Co. aus Millionen
-                    <br>
-                    von Titeln ein Lied auszusuchen und dieses sofort zu hören.<br>
-                    Dafür kann man entweder sein Smartphone nutzen und die Titel über Spotify Connect, Bluetooth,<br>
-                    AirPlay oder allen anderen gängigen Techniken auf die Geräte streamen oder man nutzt dazu den<br>
-                    den Sprachassistenten selbst. Wie dies funktioniert sieht man in folgendem Beispiel:<br>
+                    Außerdem gibt es die Möglichkeit über Sprachassistenten Musik in verschiedenen Räumen gleichzeitig zu hören. <br> Dabei hat man die Möglichkeit aus der Musikbibliothek von Spotify, Apple Music und Co. aus Millionen
+                    <br> von Titeln ein Lied auszusuchen und dieses sofort zu hören.<br> Dafür kann man entweder sein Smartphone nutzen und die Titel über Spotify Connect, Bluetooth,<br> AirPlay oder allen anderen gängigen Techniken auf die Geräte streamen
+                    oder man nutzt dazu den<br> den Sprachassistenten selbst. Wie dies funktioniert sieht man in folgendem Beispiel:<br>
                 </p>
             </div>
             <div class="content-right">
                 <p style="padding-right: 3%;">
-                    Außerdem gibt es die Möglichkeit über Sprachassistenten Musik in verschiedenen Räumen <br>
-                    gleichzeitig zu hören. Dabei hat man die Möglichkeit aus der Musikbibliothek von Spotify, <br>
-                    Apple Music und Co. aus Millionen von Titeln ein Lied auszusuchen und dieses sofort zu hören.<br>
-                    Dafür kann man entweder sein Smartphone nutzen und die Titel über Spotify Connect, Bluetooth,<br>
-                    AirPlay oder allen anderen gängigen Techniken auf die Geräte streamen oder man nutzt dazu den<br>
-                    den Sprachassistenten selbst. Wie dies funktioniert sieht man in folgendem Beispiel:<br>
+                    Außerdem gibt es die Möglichkeit über Sprachassistenten Musik in verschiedenen Räumen <br> gleichzeitig zu hören. Dabei hat man die Möglichkeit aus der Musikbibliothek von Spotify, <br> Apple Music und Co. aus Millionen von Titeln
+                    ein Lied auszusuchen und dieses sofort zu hören.<br> Dafür kann man entweder sein Smartphone nutzen und die Titel über Spotify Connect, Bluetooth,<br> AirPlay oder allen anderen gängigen Techniken auf die Geräte streamen oder man nutzt
+                    dazu den<br> den Sprachassistenten selbst. Wie dies funktioniert sieht man in folgendem Beispiel:<br>
                 </p>
                 <audio controls>
-                    <source src="media/Mozart_mp3.mp3" type="audio/mp3" />
-                    <source src="media/Mozart_ogg.ogg" type="audio/ogg" />
-                    <source src="media/Mozart_wav.wav" type="audio/wav" />
+                    <source src="assets/media/Mozart_mp3.mp3" type="audio/mp3" />
+                    <source src="assets/media/Mozart_ogg.ogg" type="audio/ogg" />
+                    <source src="assets/media/Mozart_wav.wav" type="audio/wav" />
                 </audio>
             </div>
         </div>
