verlinkung main seite

--- a/Gruppenaufgabe/lukas_weier/kontakt.html
+++ b/Gruppenaufgabe/lukas_weier/kontakt.html
@@ -32,7 +32,7 @@
 				</span>
                 <a href="https://www.google.com/search?client=opera&q=residenz+donnersberg&sourceid=opera&ie=UTF-8&oe=UTF-8" target=”_blank”><img src="img/RD_Logo.png" alt="RD Logo" title="RD Logo" width="225" height="150"></a>
                 <span class="right">
-					<a>Gruppenseite</a>
+					<a href="../index.html">Gruppenseite</a>
 					<a href="assets/media/SmartHome.pdf" download>Download</a>
 				</span>
             </div>
