jonathan: changed links

--- a/Gruppenaufgabe/jonathan_koessmeier/assets/subside/Silberturm.html
+++ b/Gruppenaufgabe/jonathan_koessmeier/assets/subside/Silberturm.html
@@ -8,9 +8,9 @@
 <meta name="keywords" content="Skyline, Frankfurt, Webdesign, Silberturm" />
 <meta name="author" content="jonathan.koessmeier" />
 <meta name="robots" content="noindex" />
-<link href="/assets/image/Skyline.ico" rel="shortcut icon" />
-<link href="/assets/styles/Stylesheet_Jonathan_Koessmeier.css" rel="stylesheet" type="text/css" />
-<script src="/assets/javascript/PDFrunningtime.js"></script>
+<link href="../image/Skyline.ico" rel="shortcut icon" />
+<link href="../styles/Stylesheet_Jonathan_Koessmeier.css" rel="stylesheet" type="text/css" />
+<script src="../javascript/PDFrunningtime.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js"></script>
 
 <!-- Ende metadaten-->
@@ -25,12 +25,12 @@
     <!-- Navigation -->
     <div id="navigation">
 		<ul>
-			<li><a class="hover_class" href="home">Home</a></li>
-			<li><a class="hover_class" href="Leon_Mikolakazaka">Leon</a></li>
-			<li><a class="hover_class" href="Lukas_Blesurius">Lukas Blesius</a></li>
-			<li><a class="hover_class" href="Lukas_Weier">Lukas Weier</a></li>
-			<li><a class="hover_class" href="Sören_Scheibner">Sören</a></li>
-			<li><a class="hover_class" href="/Jonathan_koessmeier.html">Jonathan Kößmeier</a></li>
+            <li><a class="hover_class" href="/Gruppenaufgabe/index.html">Home</a></li>
+            <li><a class="hover_class" href="/Gruppenaufgabe/jonathan_koessmeier/jonathan_koessmeier.html">Jonathan Kößmeier</a></li>
+            <li><a class="hover_class" href="/Gruppenaufgabe/leon_mikolajczak/leon_mikolajczak.html">Leon Mikolajczak</a></li>
+            <li><a class="hover_class" href="/Gruppenaufgabe/lukas_blesius/lukas_blesius.html">Lukas Blesius</a></li>
+            <li><a class="hover_class" href="/Gruppenaufgabe/lukas_weier/lukas_weier.html">Lukas Weier</a></li>
+            <li><a class="hover_class" href="/Gruppenaufgabe/soeren_scheibner/soeren_scheibner.html">Sören Scheibner</a></li>
 		</ul>
 	</div> 
      <!--Content -->      
@@ -40,8 +40,8 @@
             <h1>Silberturm in Frankfurt</h1>
             <p>Der Silberturm in Frankfurt ist der zwöflt größte Turm in Deutschland mit einer Höhe 166,0m. Er bbesteht aus 2 Untergeschossen und 32 Obergeschossen.</p>
             <P>Aktuell befindet sich die Deutsche Bahn AG bzw. ihre IT-Tochter DB Systel GmbH in dem Turm</P>
-            <img class="image_Silberturm" src= "/assets/image/PANO_20210314_140836.jpg" alt="Silberturm" width="300" height="300">
-            <a href="/assets/pdf/Silberturm.pdf" download>Alle Infos zum Runterladen</a>
+            <img class="image_Silberturm" src= "../image/PANO_20210314_140836.jpg" alt="Silberturm" width="300" height="300">
+            <a href="../pdf/Silberturm.pdf" download>Alle Infos zum Runterladen</a>
         </div>
         <!-- Kontaktformuolar-->
         <div class="card_Silberturm">
