--- a/Gruppenaufgabe/jonathan_koessmeier/jonathan_koessmeier.html
+++ b/Gruppenaufgabe/jonathan_koessmeier/jonathan_koessmeier.html
@@ -9,9 +9,9 @@
 <meta name="author" content="jonathan.koessmeier" />
 <meta name="robots" content="noindex" />
 
-<link href="/assets/image/Skyline.ico" rel="shortcut icon" />
-<link href="/assets/styles/Stylesheet_Jonathan_Koessmeier.css" rel="stylesheet" type="text/css" />
-<script src="/assets/javascript/Canvas.js"></script>
+<link href="assets/image/Skyline.ico" rel="shortcut icon" />
+<link href="assets/styles/Stylesheet_Jonathan_Koessmeier.css" rel="stylesheet" type="text/css" />
+<script src="assets/javascript/Canvas.js"></script>
 </head>
 <!-- visible content -->
 <body>
@@ -27,11 +27,11 @@
 	<!--Navigation-->
 	<div id="navigation">
 		<ul>
-			<li><a class="hover_class" href="home">Home</a></li>
-			<li><a class="hover_class" href="Leon_Mikolakazaka">Leon</a></li>
-			<li><a class="hover_class" href="Lukas_Blesurius">Lukas Blesius</a></li>
-			<li><a class="hover_class" href="Lukas_Weier">Lukas Weier</a></li>
-			<li><a class="hover_class" href="Sören_Scheibner">Sören</a></li>
+			<li><a class="hover_class" href="../index.html">Home</a></li>
+			<li><a class="hover_class" href="../leon_mikolajczak/leon_mikolajczak.html">Leon Mikolajczak</a></li>
+			<li><a class="hover_class" href="../lukas_blesius/lukas_blesius.html">Lukas Blesius</a></li>
+			<li><a class="hover_class" href="../lukas_weier/lukas_weier.html">Lukas Weier</a></li>
+			<li><a class="hover_class" href="../soeren_scheibner/soeren_scheibner.html">Sören Scheibner</a></li>
 			<li><a class="hover_class" href="assets/subside/Silberturm.html">Silberturm</a></li>
 		</ul>
 		
