--- a/Gruppenaufgabe/lukas_weier/kontakt.html
+++ b/Gruppenaufgabe/lukas_weier/kontakt.html
@@ -30,7 +30,7 @@
 					<a href="lukas_weier.html">Aktuelles</a>
 					<a href="impressionen.html">Impressionen</a>
 				</span>
-                <a href="https://www.google.com/search?client=opera&q=residenz+donnersberg&sourceid=opera&ie=UTF-8&oe=UTF-8" target=”_blank”><img src="img/RD_Logo.png" alt="RD Logo" title="RD Logo" width="225" height="150"></a>
+                <a href="https://www.google.com/search?client=opera&q=residenz+donnersberg&sourceid=opera&ie=UTF-8&oe=UTF-8" target=”_blank”><img src="assets/img/RD_Logo.png" alt="RD Logo" title="RD Logo" width="225" height="150"></a>
                 <span class="right">
 					<a href="../index.html">Gruppenseite</a>
 					<a href="assets/media/SmartHome.pdf" download>Download</a>
