--- a/Gruppenaufgabe/jonathan_koessmeier/jonathan_koessmeier.html
+++ b/Gruppenaufgabe/jonathan_koessmeier/jonathan_koessmeier.html
@@ -42,8 +42,7 @@
 			<div class="card">
 				<h1>Die Skyline Frankfurts</h1>
 				<video  controls>
-					<source src="assets/videos/SkylineFrankfurt.mov" type="video/MOV">
-						<source src="assets/videos/SkylineFrankfurt.ogv" type="video/ogv">
+					<source src="assets/videos/SkylineFrankfurt.mp4" type="video/mp4">
 					<source src="assets/videos/SkylineFrankfurt.webm" type="video/webm">
 				Your browser does not support the video tag.
 				</video> 
